@@ -1,3 +1,8 @@
+[B]1.5.2[/B] - 11-11-2019
+- Enhanced context menu items
+- Added sleep when doing file operations (useful for slower devices)
+- Bug fixes, mostly player related
+
 [B]1.5.1[/B] - 23-08-2019
 - Add exception to headers object loop finder in case it fails
 
